--- a/config.toml
+++ b/config.toml
@@ -113,5 +113,5 @@ link = "https://instagram.com"
 title = "Instagram"
 [[params.social]]
 icon = "fab fa-github"
-link = "https://github.com"
+link = "https://github.com/IvyChere/ivychere.github.io/"
 title = "Github"
