--- a/config.toml
+++ b/config.toml
@@ -46,7 +46,7 @@ custom_script = ""
 description = "俯瞰昆仑，仰望星辰"
 email = ""
 favicon = "images/favicon/favicon.ico"
-logo = "images/static/images/StarsPress_logo.PNG"
+logo = "images/static/images/starspress-logo.png"
 logo_height = "26px"
 logo_rotate = true
 logo_text = "新闻"
