--- a/config.toml
+++ b/config.toml
@@ -49,7 +49,7 @@ favicon = "images/favicon/favicon.ico"
 logo = "images/starspress-logo.png"
 logo_height = "26px"
 logo_rotate = true
-logo_text = "新闻"
+logo_text = "星辰通讯社"
 mainSections = ["news"]
 mobile = ""
 search = true
